--- a/page2.html
+++ b/page2.html
@@ -79,12 +79,12 @@
                   <img id="stars" src="image/page2/stars.png" width="90" height="30">
                   <p class="crossed" style=" text-decoration: line-through; font-size:0.9em; font-weight:normal; color:#888;"> $99 </p>
                   <p class="crossed" style="color:rgb(76, 171, 22); font-size:1.5em">$34.99</p>
-                  <a href="#modal" id="img-top" class="view">VIEW DEAL</a>
+                  <a href=".modal" id="img-top" class="view">VIEW DEAL</a>
 
                 </article>
                 <div href="#img-top" id="modal">
                   <div>
-                    <a href="#close" title="close" class="close">X</a>
+                    <a href=".close" title="close" class="close">X</a>
                     <img src="image/page2/img-top.jpg">
                     <h2>Traveler's Club 19" Rolling Backpack with Laptop Compartment</h2>
                   <p>Keep your laptop and other important items safe during travel with this rolling backpack loaded with organizational </p>
