--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         	
             <div id="header-color">
             <div id="top-header">
-                <a href="index.html" id="logo"><img src="image/logo.jpg"></a>
+                <a href="index.html"><img id="logo-size" src="image/logo.png"/></a>
         	   <div id="search">
                  <input class="search" type="text" placeholder="search..."></input>
                  <input id="location" type="text"></input>
