--- a/page2.html
+++ b/page2.html
@@ -15,7 +15,7 @@
         <header>
         	
             <div id="top-header">
-                <a href="index.html" id="logo"><img src="image/logo.jpg"></a>
+                <a href="index.html"><img id="logo-size" src="image/logo.png"/></a>
         	   <div id="search">
                  <input type="text" placeholder="search..."></input>
                  <input id="location" type="text"></input>
